export type EstatusCopia = "EN_BIBLIOTECA" | "PRESTADA" | "CON_RETRASO" | "EN_REPARACION" | "DEVUELTA"