export type TipoLibro = "NOVELA" | "POESIA" | "TEATRO" | "ENSAYO"